--- a/index.html
+++ b/index.html
@@ -254,6 +254,11 @@
                   <video width="200" src="./assets/movie/case5.mp4" autoplay loop controls muted></video>
                 </div>
               </th>
+              <th>
+                <div class="video-container">
+                  <video width="1000" src="./assets/movie/case12.mp4" autoplay loop controls muted></video>
+                </div>
+              </th>
             </tr>
             <tr>
               <th>
